<resources>
    <string name="app_name">BostonHacks2020</string>
    <string name="server_client_id">510879454537-ctj97pcv4sp98ve5vkeiv5asjng9da7b.apps.googleusercontent.com</string>
    <string name="app">Rate my Pet</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="title_menu">Menu</string>
    <string name="addfriend">Connect</string>
    <string name="addpic">Send a Picture</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share your cutie here</string>
    <string name="upload">Upload</string>
    <string name="create_post">Create Post</string>
    <string name="choose_image">Choose Image</string>
    <string name="cancel">Cancel Claim</string>
    <string name="loading">Loading…</string>
    <string name="people_who_want_this">People who want this:</string>
    <string name="draw_winner">Draw Winner</string>
    <string name="be_the_first_to_claim_this_item">Be the first to claim this item</string>
    <string name="i_want_this">I want this</string>
    <string name="no_claimers_yet_msg">No claimers yet</string>
    <string name="write_a_description">Write a description</string>
    <string name="draw_a_winner">Draw a Winner</string>
    <string name="draw_winner_prompt">Are you sure you want to draw a winner?</string>
    <string name="accept">yes</string>
    <string name="no">no</string>
    <string name="the_winner_is">The winner is :</string>
    <string name="contact_with_host">Contact with Host</string>
    <string name="gift">GIFT</string>
    <string name="a_gesture_of_kindness">A gesture of Kindness</string>
    <string name="sign_in">Sign In</string>
    <string name="internship_title">Internship title</string>
    <string name="description">Description</string>
    <string name="title_hint">e.g. Android Developer Intern</string>
    <string name="description_hint">e.g. Job responsibilities</string>
    <string name="requirements_label">Requirements</string>
    <string name="requirements_hint">e.g. Kotlin</string>
    <string name="benefits_label">Benefits</string>
    <string name="benefits_hint">e.g. Ride to office</string>
    <string name="salary">Salary</string>
    <string name="starting_salary_hint">e.g. 10,000</string>
    <string name="ending_salary_hint">e.g. 50,000</string>
    <string name="to">To</string>
    <string name="deadline_label">Deadline</string>
    <string name="deadline_hint">dd/mm/yyyy</string>
    <string name="job_type">Job Type</string>
    <string name="part_time">Part time</string>
    <string name="full_time">Full time</string>
    <string name="post">Post</string>
    <string name="optional">(optional)</string>
    <string name="posting">Posting...</string>
    <string name="company_logo">Company Logo</string>
    <string name="jobs_for_you">Jobs for you</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="deadline_text">Deadline : %1$s</string>
    <string name="you_applied_for_this_job">You applied for this job</string>
    <string name="apply_now">Apply Now</string>
    <string name="good_luck_with_job_hunting">Good luck with Job Hunting!</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="my_jobs">My Jobs</string>
</resources>