<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aliakberaakash.internnet.ui.features.create_post.CreatePostViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleLabel"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/internship_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleField"
                style="@style/TextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_field_background"
                    android:hint="@string/title_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:text="@={viewModel.titleText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/jobTypeLabel"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/job_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleField" />

            <RadioGroup
                android:id="@+id/jobTypeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobTypeLabel">

                <RadioButton
                    android:id="@+id/radio_pirates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondary"
                    android:text="@string/full_time"
                    android:textColor="@color/username_text_color" />

                <RadioButton
                    android:id="@+id/radio_ninjas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:buttonTint="@color/secondary"
                    android:text="@string/part_time"
                    android:textColor="@color/username_text_color" />
            </RadioGroup>


            <TextView
                android:id="@+id/descriptionLabel"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobTypeField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionField"
                style="@style/TextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/text_field_background"
                    android:gravity="start"
                    android:hint="@string/description_hint"
                    android:lines="3"
                    android:paddingTop="16dp"
                    android:scrollbars="vertical"
                    android:text="@={viewModel.descriptionText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/requirementsLabel"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/requirements_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/requirementsField"
                style="@style/TextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requirementsLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/text_field_background"
                    android:gravity="start"
                    android:hint="@string/requirements_hint"
                    android:lines="3"
                    android:paddingTop="16dp"
                    android:scrollbars="vertical"
                    android:text="@={viewModel.requirementsText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/benefitsLabel"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/benefits_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requirementsField" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/optional"
                app:layout_constraintBottom_toBottomOf="@+id/benefitsLabel"
                app:layout_constraintStart_toEndOf="@+id/benefitsLabel"
                app:layout_constraintTop_toTopOf="@+id/benefitsLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/benefitsField"
                style="@style/TextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/benefitsLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/text_field_background"
                    android:gravity="start"
                    android:hint="@string/benefits_hint"
                    android:lines="3"
                    android:paddingTop="16dp"
                    android:scrollbars="vertical"
                    android:text="@{viewModel.benefitsText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/salaryLabel"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/salary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/benefitsField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startingSalaryField"
                style="@style/TextLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/toText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/salaryLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_field_background"
                    android:hint="@string/starting_salary_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:text="@={viewModel.startingSalaryText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/toText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/to"
                app:layout_constraintBottom_toBottomOf="@+id/startingSalaryField"
                app:layout_constraintEnd_toEndOf="@+id/benefitsField"
                app:layout_constraintStart_toStartOf="@+id/benefitsField"
                app:layout_constraintTop_toTopOf="@+id/startingSalaryField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endSalaryField"
                style="@style/TextLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toText"
                app:layout_constraintTop_toBottomOf="@+id/salaryLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_field_background"
                    android:hint="@string/ending_salary_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:text="@={viewModel.maximumSalaryText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/deadlineLabel"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deadline_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startingSalaryField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deadlineField"
                style="@style/TextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toText"
                app:layout_constraintTop_toBottomOf="@+id/deadlineLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_field_background"
                    android:focusable="false"
                    android:hint="@string/deadline_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:text="@={viewModel.deadlineText}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/postButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue_button_state_colors"
                android:enabled="@{viewModel.postButtonState}"
                android:onClick="@{()->viewModel.onPostClicked()}"
                android:text="@string/post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadlineField" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>